--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET_KEY='django-insecure-dq%489eg8=-$hwyycimpn98(9s93mju2gq$(qtfxf!j^lf5fes'
-ALLOWED_HOSTS=localhost,127.0.0.1,.vercel.app
-# ALLOWED_HOSTS=.vercel.app
+# ALLOWED_HOSTS=localhost,127.0.0.1,.vercel.app
+ALLOWED_HOSTS=.vercel.app
 DB_NAME='neondb'
 DB_USER='danieljkpraveen'
 DB_PASSWORD='6MxuTpjsI2BE'
