new server changes

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-SECRET_KEY='django-insecure-dq%489eg8=-$hwyycimpn98(9s93mju2gq$(qtfxf!j^lf5fes'
+# SECRET_KEY=
 # ALLOWED_HOSTS=localhost,127.0.0.1,.vercel.app
-ALLOWED_HOSTS=.vercel.app
-DB_NAME='neondb'
-DB_USER='danieljkpraveen'
-DB_PASSWORD='6MxuTpjsI2BE'
-DB_HOST='ep-curly-poetry-75866079.us-east-2.aws.neon.tech'
-DB_PORT=5432
-LOGIN_URL = '/login/'
-LOGIN_REDIRECT_URL = '/'
-LOGOUT_REDIRECT_URL = '/'
+# # ALLOWED_HOSTS=.vercel.app
+# DB_NAME=
+# DB_USER=
+# DB_PASSWORD=
+# DB_HOST=
+# DB_PORT=5432
+# LOGIN_URL = '/login/'
+# LOGIN_REDIRECT_URL = '/'
+# LOGOUT_REDIRECT_URL = '/'
