--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-asgiref==3.7.2
-Django==4.2.4
-Pillow==10.0.0
-psycopg2-binary==2.9.7
-python-dotenv==1.0.0
-sqlparse==0.4.4
-typing_extensions==4.7.1
+distlib==0.3.7
+filelock==3.12.2
+platformdirs==3.10.0
+virtualenv==20.24.3
