--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ distlib==0.3.7
 Django==4.2.5
 django-extensions==3.2.3
 filelock==3.12.2
+Pillow==10.0.1
 platformdirs==3.10.0
 sqlparse==0.4.4
 virtualenv==20.24.3
