--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.7.2
 distlib==0.3.7
 Django==4.2.5
+django-environ==0.11.2
 django-extensions==3.2.3
 filelock==3.12.2
 Pillow==10.0.1
 platformdirs==3.10.0
 sqlparse==0.4.4
 tzdata==2023.3
+virtualenv==20.24.3
